[metadata]
name = DSA
version = attr: DSA.__version__
description = Data structure & algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = Abdulrahman M. Zaky
author-email = aionmone14@gmail.com
license = GNU GPL v3
url = https://github.com/Aionmone/DSA
project_urls =
    Bug Tracker = https://github.com/Aionmone/DSA/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU GPL v3 License

keywords =
    DSA
    Data structure
    Algorithms

[options]
include_package_data = True
packages = DSA

[options.packages.find]
exclude =
    tests
